Add More Themes

--- a/scripts/base/themes/github-dark.css
+++ b/scripts/base/themes/github-dark.css
@@ -28,7 +28,7 @@
 
   /* Editor */
   --cursor-color: #cde0fc;
-  --line-number-color: #464d55;
+  --line-number-color: #485057;
   --active-line-number-color: #e2e4e8;
   --active-line-background-color: #2c3035;
   --selected-text-background-color: #303565;
